# weather-chatbot

./: .gitignore  Dockerfile  README.md  pyproject.toml  shell.nix
chatbot/: bot.py  counter.py  handlers.py  main.py  weather.py
